fix gaps

--- a/src/_codux/boards/style-guide.board.module.scss
+++ b/src/_codux/boards/style-guide.board.module.scss
@@ -81,7 +81,7 @@
   column-gap: 20px;
 }
 
-.subtitleFontType {
+.subtitleValue {
   color: #898989;
   font-size: 11px;
 }
@@ -106,8 +106,7 @@
 }
 .grid1 {
   display: grid;
-  // grid-template: 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 20px;
+  gap: 16px;
   grid-template-columns: repeat(6, 100px);
   grid-template-rows: repeat(6, 125px);
 }
